--- a/2Phamaceutical dataset (XGB - LGBM.ipynb
+++ b/2Phamaceutical dataset (XGB - LGBM.ipynb
@@ -2,13 +2,8 @@
  "cells": [],
  "metadata": {
   "colab": {
-   "authorship_tag": "ABX9TyNAmwnsXa4zmoPzHeEJMbKl",
-   "provenance": [
-    {
-     "file_id": "1fn1j485ur1s5DzMwgqA5LHKqdxYtyo7r",
-     "timestamp": 1746366355538
-    }
-   ]
+   "authorship_tag": "ABX9TyM2y5jRDec73BAjBMbf0KGE",
+   "provenance": []
   },
   "kernelspec": {
    "display_name": "Python 3",
